--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sloppa Choppa</title>
+  <title>Snails</title>
   <style>
     body {
       margin: 0;
@@ -69,7 +69,7 @@
 <body>
   <div class="content">
     <div class="ca-box">CA: will be added soon</div>
-    <a href="https://x.com/i/communities/1987998813408149835" target="_blank" class="btn">Join X Community</a>
+    <a href="https://x.com/i/communities/1988036400181100606" target="_blank" class="btn">Join X Community</a>
   </div>
 </body>
 </html>
